[package]
name = "valcurt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version="0.8.5", features=["small_rng"]}
mem_dbg = "0.1"
core_affinity = "0.8.1"
tqdm = "0.7.0"
vers-vecs = {version="1.3.1", features=["serde"]}
succinct = "0.5.2"
bitm = "0.4.1"
sucds = "0.8.1"
sux = {git = "https://github.com/vigna/sux-rs", branch="broad-builder"}

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benches"
harness = false